--- a/newsdaily/style.css
+++ b/newsdaily/style.css
@@ -2,7 +2,7 @@
 Theme Name: 	   NewsDaily
 Text Domain: 	   newsdaily
 Template: 			newsmash
-Version:            1.0.50
+Version:            1.0.51
 Tested up to:       6.6
 Requires at least:  4.7
 Requires PHP:       7.0
@@ -297,5 +297,9 @@ table.wc-block-cart-items .wc-block-cart-items__row .wc-block-components-product
 }
 
 .wc-block-components-product-metadata .wc-block-components-product-metadata__description>p {
+    font-size: 1.2rem;
+}
+
+table.wc-block-cart-items .wc-block-components-product-price {
     font-size: 1.2rem;
 }
