--- a/newsdaily/style.css
+++ b/newsdaily/style.css
@@ -2,7 +2,7 @@
 Theme Name: 	   NewsDaily
 Text Domain: 	   newsdaily
 Template: 			newsmash
-Version:            1.0.51
+Version:            1.0.52
 Tested up to:       6.6
 Requires at least:  4.7
 Requires PHP:       7.0
@@ -302,4 +302,10 @@ table.wc-block-cart-items .wc-block-cart-items__row .wc-block-components-product
 
 table.wc-block-cart-items .wc-block-components-product-price {
     font-size: 1.2rem;
+}
+
+
+.wc-block-mini-cart__empty-cart-wrapper .wc-block-mini-cart__shopping-button:hover, 
+.wc-block-mini-cart__empty-cart-wrapper .wc-block-mini-cart__shopping-button:focus {
+    color: #fff;
 }
