--- a/newsdaily/style.css
+++ b/newsdaily/style.css
@@ -2,7 +2,7 @@
 Theme Name: 	   NewsDaily
 Text Domain: 	   newsdaily
 Template: 			newsmash
-Version:            1.0.53
+Version:            1.0.54
 Tested up to:       6.6
 Requires at least:  4.7
 Requires PHP:       7.0
@@ -312,4 +312,8 @@ table.wc-block-cart-items .wc-block-components-product-price {
 
 .widget.widget_shopping_cart a:before {
     display:none
+}
+
+.widget .wc-block-grid__products a:before {
+    display: none;
 }
