--- a/newsdaily/style.css
+++ b/newsdaily/style.css
@@ -2,7 +2,7 @@
 Theme Name: 	   NewsDaily
 Text Domain: 	   newsdaily
 Template: 			newsmash
-Version:            1.0.54
+Version:            1.0.55
 Tested up to:       6.6
 Requires at least:  4.7
 Requires PHP:       7.0
@@ -316,4 +316,8 @@ table.wc-block-cart-items .wc-block-components-product-price {
 
 .widget .wc-block-grid__products a:before {
     display: none;
+}
+
+table.wc-block-cart-items .wc-block-cart-items__row .wc-block-cart-item__quantity .wc-block-cart-item__remove-link {
+    font-size: 1rem !important;
 }
