--- a/newsdaily/style.css
+++ b/newsdaily/style.css
@@ -2,7 +2,7 @@
 Theme Name: 	   NewsDaily
 Text Domain: 	   newsdaily
 Template: 			newsmash
-Version:            1.0.58
+Version:            1.0.59
 Tested up to:       6.7
 Requires at least:  4.7
 Requires PHP:       7.0
@@ -324,4 +324,11 @@ table.wc-block-cart-items .wc-block-cart-items__row .wc-block-cart-item__quantit
 
 .wc-block-components-totals-item__value {
     font-size: 1.5rem;
+}
+
+.wc-block-mini-cart__footer-checkout,
+.wc-block-mini-cart__footer-checkout:hover,
+.wc-block-mini-cart__footer-checkout:focus {
+    background-color: var(--dt-main-color);
+    color: #fff;
 }
