--- a/newsdaily/style.css
+++ b/newsdaily/style.css
@@ -2,7 +2,7 @@
 Theme Name: 	   NewsDaily
 Text Domain: 	   newsdaily
 Template: 			newsmash
-Version:            1.0.59
+Version:            1.0.60
 Tested up to:       6.7
 Requires at least:  4.7
 Requires PHP:       7.0
@@ -331,4 +331,8 @@ table.wc-block-cart-items .wc-block-cart-items__row .wc-block-cart-item__quantit
 .wc-block-mini-cart__footer-checkout:focus {
     background-color: var(--dt-main-color);
     color: #fff;
+}
+
+.wc-block-mini-cart__footer .wc-block-mini-cart__footer-actions a {
+    text-decoration: none;
 }
