--- a/newsdaily/style.css
+++ b/newsdaily/style.css
@@ -2,7 +2,7 @@
 Theme Name: 	   NewsDaily
 Text Domain: 	   newsdaily
 Template: 			newsmash
-Version:            1.0.62
+Version:            1.0.63
 Tested up to:       6.7
 Requires at least:  4.7
 Requires PHP:       7.0
@@ -343,4 +343,8 @@ table.wc-block-cart-items .wc-block-cart-items__row .wc-block-cart-item__quantit
 
 table.wc-block-cart-items .wc-block-cart-items__row .wc-block-components-product-name {
     text-decoration: none;
+}
+
+.wc-block-mini-cart__footer .wc-block-mini-cart__footer-actions a {
+    font-size: 1.2rem;
 }
