--- a/newsdaily/style.css
+++ b/newsdaily/style.css
@@ -2,7 +2,7 @@
 Theme Name: 	   NewsDaily
 Text Domain: 	   newsdaily
 Template: 			newsmash
-Version:            1.0.63
+Version:            1.0.64
 Tested up to:       6.7
 Requires at least:  4.7
 Requires PHP:       7.0
@@ -347,4 +347,8 @@ table.wc-block-cart-items .wc-block-cart-items__row .wc-block-components-product
 
 .wc-block-mini-cart__footer .wc-block-mini-cart__footer-actions a {
     font-size: 1.2rem;
+}
+
+.wc-block-mini-cart__footer span.wc-block-components-totals-item__label {
+    font-size: 1.5rem;
 }
