--- a/newsdaily/style.css
+++ b/newsdaily/style.css
@@ -2,7 +2,7 @@
 Theme Name: 	   NewsDaily
 Text Domain: 	   newsdaily
 Template: 			newsmash
-Version:            1.0.66
+Version:            1.0.67
 Tested up to:       6.7
 Requires at least:  4.7
 Requires PHP:       7.0
@@ -359,4 +359,8 @@ table.wc-block-cart-items .wc-block-cart-items__row .wc-block-components-product
 
 table.wc-block-cart-items .wc-block-cart-items__row .wc-block-cart-item__quantity .wc-block-cart-item__remove-link {
     text-decoration: none !important;
+}
+
+.wp-block-latest-comments__comment a {
+    text-decoration: none;
 }
