--- a/newsdaily/style.css
+++ b/newsdaily/style.css
@@ -2,7 +2,7 @@
 Theme Name: 	   NewsDaily
 Text Domain: 	   newsdaily
 Template: 			newsmash
-Version:            1.0.73
+Version:            1.0.74
 Tested up to:       6.7
 Requires at least:  4.7
 Requires PHP:       7.0
@@ -383,7 +383,8 @@ table.wc-block-cart-items .wc-block-cart-items__row .wc-block-cart-item__quantit
     width: 2rem !important;
 }
 
-.dt_sidebar .wp-block-comment-author-name a {
+.dt_sidebar .wp-block-comment-author-name a,
+.dt_sidebar .wp-block-comment-date a {
     text-decoration: none;
     color: var(--dt-black-color);
 }
