--- a/newsdaily/style.css
+++ b/newsdaily/style.css
@@ -2,7 +2,7 @@
 Theme Name: 	   NewsDaily
 Text Domain: 	   newsdaily
 Template: 			newsmash
-Version:            1.0.76
+Version:            1.0.77
 Tested up to:       6.7
 Requires at least:  4.7
 Requires PHP:       7.0
@@ -396,4 +396,8 @@ table.wc-block-cart-items .wc-block-cart-items__row .wc-block-cart-item__quantit
 .wp-block-avatar:hover img {
     -webkit-transform: scale(1.07);
     transform: scale(1.07);
+}
+
+.wp-block-page-list {
+    list-style: none;
 }
