--- a/newsdaily/style.css
+++ b/newsdaily/style.css
@@ -2,7 +2,7 @@
 Theme Name: 	   NewsDaily
 Text Domain: 	   newsdaily
 Template: 			newsmash
-Version:            1.0.78
+Version:            1.0.79
 Tested up to:       6.8
 Requires at least:  4.7
 Requires PHP:       7.0
@@ -400,4 +400,8 @@ table.wc-block-cart-items .wc-block-cart-items__row .wc-block-cart-item__quantit
 
 .wp-block-page-list {
     list-style: none;
+}
+
+.wp-block-page-list a {
+    text-decoration: none;
 }
