--- a/newsdaily/style.css
+++ b/newsdaily/style.css
@@ -2,7 +2,7 @@
 Theme Name: 	   NewsDaily
 Text Domain: 	   newsdaily
 Template: 			newsmash
-Version:            1.0.83
+Version:            1.0.84
 Tested up to:       6.8
 Requires at least:  4.7
 Requires PHP:       7.0
@@ -412,4 +412,8 @@ table.wc-block-cart-items .wc-block-cart-items__row .wc-block-cart-item__quantit
 .wp-block-page-list a:hover,
 .wp-block-page-list a:focus {
     color: var(--dt-main-color);
+}
+
+.wp-block-list {
+    padding: 0;
 }
