--- a/newsdaily/style.css
+++ b/newsdaily/style.css
@@ -2,7 +2,7 @@
 Theme Name: 	   NewsDaily
 Text Domain: 	   newsdaily
 Template: 			newsmash
-Version:            1.0.84
+Version:            1.0.85
 Tested up to:       6.8
 Requires at least:  4.7
 Requires PHP:       7.0
@@ -416,4 +416,8 @@ table.wc-block-cart-items .wc-block-cart-items__row .wc-block-cart-item__quantit
 
 .wp-block-list {
     padding: 0;
+}
+
+.wp-block-list.has-background {
+    padding: 1.25em 2.375em;
 }
