--- a/newsdaily/style.css
+++ b/newsdaily/style.css
@@ -2,7 +2,7 @@
 Theme Name: 	   NewsDaily
 Text Domain: 	   newsdaily
 Template: 			newsmash
-Version:            1.0.88
+Version:            1.0.89
 Tested up to:       6.8
 Requires at least:  4.7
 Requires PHP:       7.0
@@ -432,4 +432,8 @@ table.wc-block-cart-items .wc-block-cart-items__row .wc-block-cart-item__quantit
 
 .wp-block-preformatted.has-background {
     padding: 1em;
+}
+
+.wp-block-archives {
+    list-style: none;
 }
