--- a/newsdaily/style.css
+++ b/newsdaily/style.css
@@ -2,7 +2,7 @@
 Theme Name: 	   NewsDaily
 Text Domain: 	   newsdaily
 Template: 			newsmash
-Version:            1.0.92
+Version:            1.0.93
 Tested up to:       6.8
 Requires at least:  4.7
 Requires PHP:       7.0
@@ -441,4 +441,5 @@ table.wc-block-cart-items .wc-block-cart-items__row .wc-block-cart-item__quantit
 
 .wp-block-archives-list a {
     font-weight: 600;
+    color: var(--dt-black-color);
 }
