--- a/newsdaily/style.css
+++ b/newsdaily/style.css
@@ -2,7 +2,7 @@
 Theme Name: 	   NewsDaily
 Text Domain: 	   newsdaily
 Template: 			newsmash
-Version:            1.0.93
+Version:            1.0.94
 Tested up to:       6.8
 Requires at least:  4.7
 Requires PHP:       7.0
@@ -442,4 +442,9 @@ table.wc-block-cart-items .wc-block-cart-items__row .wc-block-cart-item__quantit
 .wp-block-archives-list a {
     font-weight: 600;
     color: var(--dt-black-color);
+}
+
+.wp-block-archives-list a:hover, 
+.wp-block-archives-list a:focus {
+    color: var(--dt-main-color);
 }
