--- a/newsdaily/style.css
+++ b/newsdaily/style.css
@@ -2,7 +2,7 @@
 Theme Name: 	   NewsDaily
 Text Domain: 	   newsdaily
 Template: 			newsmash
-Version:            1.0.94
+Version:            1.0.95
 Tested up to:       6.8
 Requires at least:  4.7
 Requires PHP:       7.0
@@ -447,4 +447,8 @@ table.wc-block-cart-items .wc-block-cart-items__row .wc-block-cart-item__quantit
 .wp-block-archives-list a:hover, 
 .wp-block-archives-list a:focus {
     color: var(--dt-main-color);
+}
+
+.wp-block-page-list.has-background {
+    padding: 1rem;
 }
