--- a/newsdaily/style.css
+++ b/newsdaily/style.css
@@ -2,7 +2,7 @@
 Theme Name: 	   NewsDaily
 Text Domain: 	   newsdaily
 Template: 			newsmash
-Version:            1.0.96
+Version:            1.0.97
 Tested up to:       6.8
 Requires at least:  4.7
 Requires PHP:       7.0
@@ -456,4 +456,5 @@ table.wc-block-cart-items .wc-block-cart-items__row .wc-block-cart-item__quantit
 a.wp-block-button__link:hover, 
 a.wp-block-button__link:focus {
     color: #fff;
+    text-decoration: none;
 }
