--- a/newsdaily/style.css
+++ b/newsdaily/style.css
@@ -2,7 +2,7 @@
 Theme Name: 	   NewsDaily
 Text Domain: 	   newsdaily
 Template: 			newsmash
-Version:            1.0.97
+Version:            1.0.98
 Tested up to:       6.8
 Requires at least:  4.7
 Requires PHP:       7.0
@@ -457,4 +457,8 @@ a.wp-block-button__link:hover,
 a.wp-block-button__link:focus {
     color: #fff;
     text-decoration: none;
+}
+
+.wp-block-button.is-style-outline a.wp-block-button__link {
+    color: var(--dt-pri-color);
 }
