--- a/newsdaily/style.css
+++ b/newsdaily/style.css
@@ -2,7 +2,7 @@
 Theme Name: 	   NewsDaily
 Text Domain: 	   newsdaily
 Template: 			newsmash
-Version:            1.0.98
+Version:            1.0.99
 Tested up to:       6.8
 Requires at least:  4.7
 Requires PHP:       7.0
@@ -461,4 +461,8 @@ a.wp-block-button__link:focus {
 
 .wp-block-button.is-style-outline a.wp-block-button__link {
     color: var(--dt-pri-color);
+}
+
+.wp-block-latest-comments {
+    padding-left: 0;
 }
